fix 1 test